sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departspeed' in definition of a vehicle is empty.
Error: Invalid departspeed definition for vehicle '0'
Quitting (on error).
